Bug 342319 - The refresh action doesn't have a shortcut
Summary: The refresh action doesn't have a shortcut
Status: RESOLVED FIXED
Alias: None
Product: kdf
Classification: Applications
Component: general (other bugs)
Version First Reported In: v0.15
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-29 21:59 UTC by technikschlumpf
Modified: 2014-12-31 15:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.04
Sentry Crash Report:


Attachments
bugfix (1.23 KB, patch)
2014-12-29 22:13 UTC, technikschlumpf
Details
bugfix 2 (926 bytes, patch)
2014-12-31 12:42 UTC, technikschlumpf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description technikschlumpf 2014-12-29 21:59:14 UTC
There is no shortcut for the refresh action in the file menu of KDiskFree.

Reproducible: Always
Comment 1 technikschlumpf 2014-12-29 22:13:46 UTC
Created attachment 90163 [details]
bugfix

This should fix the bug.
Comment 2 Christoph Feck 2014-12-30 01:52:49 UTC
Thanks for the bug report and patch. Please use http://api.kde.org/classmapper.php?class=kstandardshortcut for getting the user configured shortcut of the Reload action.

Additionally, you cannot claim copyright for this small code change.
Comment 3 technikschlumpf 2014-12-31 12:42:38 UTC
Created attachment 90179 [details]
bugfix 2

OK, here comes the fixed patch.
Comment 4 Christoph Feck 2014-12-31 15:14:21 UTC
Git commit a63dbd870659ae2abd589996a7da8df684c77174 by Christoph Feck, on behalf of Martin Kröll.
Committed on 31/12/2014 at 15:12.
Pushed by cfeck into branch 'master'.

Add refresh shortcut

Reviewed by Christoph Feck
FIXED-IN: 15.04

M  +2    -1    kdf.cpp

http://commits.kde.org/kdf/a63dbd870659ae2abd589996a7da8df684c77174
Comment 5 Christoph Feck 2014-12-31 15:16:16 UTC
Committed, see link above.

Danke und guten Rutsch :)