Add refresh shortcut

Reviewed by Christoph Feck
BUG: 342319
FIXED-IN: 15.04